--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "d3": "^6.6.2",
+    "lodash": "^4.17.21",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
     "vue3-styled-components": "^1.2.0"
   },
   "devDependencies": {
+    "@types/d3": "^6.3.0",
+    "@types/lodash": "^4.14.168",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
